[package]
name = "tokenizers-c"
version = "0.1.0"
edition = "2018"

[lib]
crate-type = ["staticlib"]

[dependencies]

tokenizers = { version = "0.13.4", default-features = false, features = ["onig"] }
serde = { version = "1.0", features = [ "derive" ] }
serde_json = "1.0"
fancy-regex = "0.11.0"
rustc-hash = "1.1.0"
bstr = "1.5.0"
base64 = "0.21.7"
